src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__season_details_ui__season_details_ui_tests__tests__snapshot_tests__season_details_renders_SeasonHistorySortPrompt_1.snap
---
source: src/ui/sonarr_ui/library/season_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
             ╭  Season 1 Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮               
             │ Episodes │ History │ Manual Search                                                                                                    │               
             │───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│               
             │   Source Title                                      Event Type           Language        Quality            Date                      │               
             │=> Test source                                       grabbed              English         Bluray-1080p       2024-02-10 07:28:45 UTC   │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                      ╭─────────────────────────╮                                                      │               
             │                                                      │Something                │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      ╰─────────────────────────╯                                                      │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
